--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ wasm = [
     "web-sys/Window",
     "js-sys",
 ]
-local = []
+local = ["reqwest", "tokio", "env_logger"]
 
 
 [dependencies]
@@ -37,6 +37,11 @@ log = "0.4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 solana-sdk = "1"
+
+# local crates
+env_logger = { version = "0.9", optional = true }
+reqwest = { version = "0.11", features = ["json"], optional = true }
+tokio = { version = "1", features = ["rt", "macros"], optional = true }
 
 # wasm crates
 wasm-bindgen = { version = "0.2", optional = true }
