--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,56 +1,23 @@
 [workspace]
-members = ["examples/wasm-client-example"]
+resolver = "2"
+members = [
+    "bevy-solana-client-common",
+    "bevy-solana-client-local",
+    "bevy-solana-client-wasm",
+    "examples/wasm-client-example",
+]
+
+[workspace.package]
+version = "0.1.0"
+edition = "2021"
 
 
 [workspace.dependencies]
-bevy = "0.11"
-bevy-solana-client = { path = "./" }
-
-
-[package]
-name = "bevy-solana-client"
-version = "0.1.0"
-edition = "2021"
-authors = ["mucks <mail@mucks.dev>"]
-
-[features]
-wasm = [
-    "gloo-net",
-    "wasm-bindgen",
-    "wasm-bindgen-futures",
-    "wasm-bindgen-test",
-    "wasm-logger",
-    "web-sys",
-    "web-sys/Window",
-    "js-sys",
-]
-local = ["reqwest", "tokio", "env_logger"]
-
-
-[dependencies]
-# common crates
 anyhow = "1"
-base64 = "0.21"
-bevy.workspace = true
-bincode = "1"
+async-trait = "0.1"
+bevy = "0.14.2"
+bevy-solana-client-wasm = { path = "./bevy-solana-client-wasm" }
+bevy-solana-client-common = { path = "./bevy-solana-client-common" }
 log = "0.4"
-serde = { version = "1", features = ["derive"] }
+serde = "1"
 serde_json = "1"
-solana-sdk = "1"
-
-# local crates
-env_logger = { version = "0.9", optional = true }
-reqwest = { version = "0.11", features = ["json"], optional = true }
-tokio = { version = "1", features = ["rt", "macros"], optional = true }
-
-# wasm crates
-wasm-bindgen = { version = "0.2", optional = true }
-wasm-bindgen-futures = { version = "0.4", optional = true }
-wasm-bindgen-test = { version = "0.3", optional = true }
-wasm-logger = { version = "0.2", optional = true }
-gloo-net = { version = "0.5", optional = true }
-web-sys = { version = "0.3.64", optional = true }
-js-sys = { version = "0.3.54", optional = true }
-
-[dev-dependencies]
-lazy_static = "1"
