--- a/examples/wasm-client-example/Cargo.toml
+++ b/examples/wasm-client-example/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2021"
 
 [dependencies]
 bevy.workspace = true
-bevy-solana-client = { workspace = true, features = ["wasm"] }
+bevy-solana-client-wasm.workspace = true
